some setup changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<title>Tourigt Projekt</title>
 
 
-	<link rel="stylesheet" href="tailwind.css">
 	<link rel="stylesheet" href="style.css">
 
 
@@ -16,17 +15,12 @@
 	<script src="./js/main.js" defer></script>
 </head>
 <body>
-	<div class="min-h-screen bg-gray-300 flex flex-col space-y-4 px-4 py-4">
-
-	<div class="wrapper space-x-4">
-
-		<div class="max-w-6xl flex-1 p-4  bg-white border border-gray-100 rounded shadow-md ">Some graph here maybe
-			
+	<div id="wrapper">
+		<div id="topWrapper">
+			<div id="graphContainer"> En tourig graf här</div>
+			<div id="rightContainer"> Något annat tourigt här kanske</div>
 		</div>
-		<div class="max-w-xl flex-1 bg-white rounded shadow-md p-4">Lite touriga grejer här</div>
-	</div>
-	<div class="max-w-screen w-full p-4 h-36 bg-white border border-gray-100 rounded shadow-md">some other stuff here</div>
-
+		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt</div>
 	</div>
 	<!-- <svg></svg> -->
 </body>
