--- a/index.html
+++ b/index.html
@@ -7,22 +7,55 @@
 
 
 	<link rel="stylesheet" href="style.css">
-
+	<style type="text/css">
+		/* 13. Basic Styling with CSS */
+		
+		/* Style the lines by removing the fill and applying a stroke */
+		.line {
+				/* fill: none;
+				stroke: #ffab00;
+				stroke-width: 3; */
+		}
+		
+		/* Style the dots by assigning a fill and stroke */
+		.dot {
+				fill: #ffab00;
+				stroke: #fff;
+		}
+		
+		</style>
 
 
 	<script src="https://d3js.org/d3.v5.min.js" defer></script>
 	<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
+		<!-- Todo maybe remove this -->
+	<script src="./lib/queue/queue.js" type='text/javascript'></script>
+	
+	<!-- JS-legendernas filer -->
 	<script src="./js/main.js" defer></script>
+	<script src="./js/lineChart.js" defer></script>
+
 </head>
 <body>
 	<div id="wrapper">
 		<div id="topWrapper">
-			<div id="graphContainer"> En tourig graf här</div>
+			<div id="graphContainer"> 
+				<!-- <svg class="line-chart"></svg> -->
+				<label for="selection" style="margin:10px">Choose a country</label>
+				<!-- <select name="country" id="countrySelector"  style="width: 100px;">
+					<option selected="selected" value="Sweden"> Sweden </option>
+				</select> -->
+				<div style="margin:10px">
+					<select id="selectButton" name="selection" style="width:200px;"></select>
+
+				</div>
+			</div>
 			<div id="rightContainer"> Något annat tourigt här kanske</div>
 		</div>
 		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt</div>
 	</div>
-	<!-- <svg></svg> -->
+	<!-- <svg class="line-chart"></svg> -->
+	
 </body>
 
 </html>
