--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="https://d3js.org/d3.v5.min.js" defer></script>
 	<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
 	<script src="./js/main.js" defer></script>
+	<script src="./js/chart.js" defer></script>
 </head>
 <body>
 	<div id="wrapper">
