Evaluation complete, added text to container

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
 	<div id="wrapper">
 		<div id="topWrapper">
 			<div id="graphContainer"> En tourig graf här</div>
-			<div id="rightContainer"> Något annat tourigt här kanske</div>
+			<div id="rightContainer"> Avarage temperature deviation
+				<ul id="testTable" style="list-style-type: none;">
+				</ul>
+			</div>
 		</div>
-		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt</div>
+		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt
+		</div>
 	</div>
 	<!-- <svg></svg> -->
 </body>
