--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale= 1.0">
 	<title>Tourigt Projekt</title>
-
+	<link href="https://fonts.googleapis.com/css?family=Aldrich|Arima+Madurai|Arvo|Henny+Penny|Indie+Flower|Libre+Baskerville|Pirata+One|Poiret+One|Sancreek|Satisfy|Share+Tech+Mono|Smokum|Snowburst+One|Special+Elite" rel="stylesheet">
 
 	<link rel="stylesheet" href="style.css">
 
@@ -19,9 +19,15 @@
 	<div id="wrapper">
 		<div id="topWrapper">
 			<div id="graphContainer"> En tourig graf här</div>
-			<div id="rightContainer"> Avarage temperature deviation
+			<div id="rightContainer">Avarage temperature deviation
+				<div>
+					<select id="StartSpan"></select>
+					<select id="EndSpan"></select>
+				</div>
 				<ul id="testTable" style="list-style-type: none;">
 				</ul>
+				<svg id="testClass">
+				</svg>
 			</div>
 		</div>
 		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt
