--- a/index.html
+++ b/index.html
@@ -4,38 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale= 1.0">
 	<title>Tourigt Projekt</title>
-
-
 	<link rel="stylesheet" href="style.css">
-	<style type="text/css">
-		/* 13. Basic Styling with CSS */
-		
-		/* Style the lines by removing the fill and applying a stroke */
-		/* .line {
-				/* fill: none;
-				stroke: #ffab00;
-				stroke-width: 3; */
-		 
-		
-		/* Style the dots by assigning a fill and stroke */
-		.dot {
-				fill: #ffab00;
-				stroke: #fff;
-		}
-
-		
-		</style>
-
 
 	<script src="https://d3js.org/d3.v5.min.js" defer></script>
 	<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
-		<!-- Todo maybe remove this -->
+
+	<!-- Todo maybe remove this -->
 	<script src="./lib/queue/queue.js" type='text/javascript'></script>
 	
 	<!-- JS-legendernas filer -->
 	<script src="./js/main.js" defer></script>
 	<script src="./js/lineChart.js" defer></script>
 	<script src="./js/cList.js" defer></script>
+
 
 	<!-- <script src="./js/testChart.js" defer></script> -->
 
@@ -45,18 +26,18 @@
 	<div id="wrapper">
 		<div id="topWrapper">
 			<div id="graphContainer"> 
-				<!-- <svg class="line-chart"></svg> -->
-				<!-- <select name="country" id="coun2trySelector"  style="width: 100px;">
-					<option selected="selected" value="Sweden"> Sweden </option>
-				</select> -->
+				<div id="legendContainer"><svg id="legend" width=170 height=100></svg></div>
 				<div class="selectionContainer">
-					<label for="selection" >Choose a country:</label>
-					<select id="selectButton" name="selection" style="width:200px;"><option class="listRow">Sweden</option></select>
-					
+					<div id="selectButtonContainer">
+						<label for="selection" >Choose a country:</label>
+						<select id="selectButton" name="selection" style="width:200px;"><option class="listRow">Sweden</option></select>
+					</div>
+					<div class="compareSelectContainer" style=" margin-left:50px">
+						<label for="compSel">Compare with country:</label>
+						<select id="compareSelect" name="compSel" style="width:200px;"><option class="compListRow">None</option></select>
+					</div>
 				</div>
-				<!-- <div id="graphInfo">
-					hello
-				</div> -->
+
 			</div>
 			<div id="rightContainer">Average temperature deviation 
 				<ul id="countryTable"></ul>
@@ -64,7 +45,6 @@
 		</div>
 		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt</div>
 	</div>
-	<!-- <svg class="line-chart"></svg> -->
 	
 </body>
 
