future prediction with linear regression

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script src="./js/main.js" defer></script>
 	<script src="./js/lineChart.js" defer></script>
 	<script src="./js/cList.js" defer></script>
+	<script src="./js/testChart.js" defer></script>
+
 
 
 	<!-- <script src="./js/testChart.js" defer></script> -->
@@ -37,7 +39,8 @@
 						<select id="compareSelect" name="compSel" style="width:200px;"><option class="compListRow">None</option></select>
 					</div>
 				</div>
-
+				<button id="futureButton">Future Prediction</button>
+				<button id="historyButton">Measured Data</button>
 			</div>
 			<div id="rightContainer">Average temperature deviation 
 				<ul id="countryTable"></ul>
