--- a/index.html
+++ b/index.html
@@ -1,34 +1,52 @@
 <!DOCTYPE html>	
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale= 1.0">
-	<title>Tourigt Projekt</title>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale= 1.0">
+		<title>Tourigt Projekt</title>
 
+		<link rel="stylesheet" href="tailwind.css">
+		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin=""/>
 
-	<link rel="stylesheet" href="tailwind.css">
-	<link rel="stylesheet" href="style.css">
+		<!-- <script src="https://d3js.org/d3.v5.min.js" defer></script> -->
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
+		<script src="./lib/queue.js" type='text/javascript'></script>
+		
+		<!-- topojson world map:-->
+		<script src="https://d3js.org/topojson.v1.min.js"></script>
 
+	</head>
+	<body>
+	
+		<div class="min-h-screen bg-gray-300 flex flex-col space-y-4 px-4 py-4">
 
-
-	<script src="https://d3js.org/d3.v5.min.js" defer></script>
-	<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
-	<script src="./js/main.js" defer></script>
-</head>
-<body>
-	<div class="min-h-screen bg-gray-300 flex flex-col space-y-4 px-4 py-4">
-
-	<div class="wrapper space-x-4">
-
-		<div class="max-w-6xl flex-1 p-4  bg-white border border-gray-100 rounded shadow-md ">Some graph here maybe
+		<div class="wrapper space-x-4">
+			<div class="max-w-6xl flex-1 p-4 bg-white border border-gray-100 rounded shadow-md flex flex-col justify-between">
+				<h2 class="flex justify-center py-8 font-bold">World map much wow!!</h2>
+				<input id="timeSlider"> 
+				<div class="h-2/3 w-full bg-gray-100 flex justify-center items-center" id="map"></div>
+			</div>
 			
+			<div class="max-w-xl flex-1 bg-white rounded shadow-md p-4">stuffs</div>
 		</div>
-		<div class="max-w-xl flex-1 bg-white rounded shadow-md p-4">Lite touriga grejer här</div>
-	</div>
-	<div class="max-w-screen w-full p-4 h-36 bg-white border border-gray-100 rounded shadow-md">some other stuff here</div>
+		<div class="max-w-screen w-full p-4 h-36 bg-white border border-gray-100 rounded shadow-md">some other stuff here</div>
 
-	</div>
-	<!-- <svg></svg> -->
-</body>
+		</div>
+		<!-- <svg></svg> -->
+	</body>
+
+	<!--Our scripts-->
+	<script src="./js/main.js" defer></script>
+	<script src="./js/map.js" type='text/javascript'></script>
+
+	 <!-- Make sure you put this AFTER Leaflet's CSS -->
+	 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+	 integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+	 crossorigin=""></script>
+
 
 </html>
