--- a/index.html
+++ b/index.html
@@ -19,18 +19,15 @@
 	<div id="wrapper">
 		<div id="topWrapper">
 			<div id="graphContainer"> En tourig graf här</div>
-			<div id="rightContainer">Avarage temperature deviation
-				<div>
-					<select id="StartSpan"></select>
-					<select id="EndSpan"></select>
-				</div>
+			<div id="rightContainer">
+				<p id="RightHeader">Avarage temperature deviation for the last 20 years.</p>
 				<ul id="testTable" style="list-style-type: none;">
 				</ul>
 				<svg id="testClass">
 				</svg>
 			</div>
 		</div>
-		<div id="bottomContainer" >Lite touriga verktyg eller ngt sånt
+		<div id="bottomContainer">Lite touriga verktyg eller ngt sånt
 		</div>
 	</div>
 	<!-- <svg></svg> -->
