cleaning, some fixes, almost done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	<script src="./js/main.js" defer></script>
 	<script src="./js/lineChart.js" defer></script>
 	<script src="./js/cList.js" defer></script>
-	<script src="./js/testChart.js" defer></script>
+	<script src="./js/lineChartFunctions.js" defer></script>
+	<script src="./js/updateLineChart.js" defer></script>
+
 
 
 
