--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
 
 		<link rel="stylesheet" href="tailwind.css">
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="map.css">
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin=""/>
 
 		<!-- <script src="https://d3js.org/d3.v5.min.js" defer></script> -->
-		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 		<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
 		<script src="./lib/queue.js" type='text/javascript'></script>
 		
 		<!-- topojson world map:-->
 		<script src="https://d3js.org/topojson.v1.min.js"></script>
+
+		<!-- drag  -->
+		<script src="https://d3js.org/d3-dispatch.v3.min.js"></script>
+		<script src="https://d3js.org/d3-selection.v3.min.js"></script>
+		<script src="https://d3js.org/d3-drag.v3.min.js"></script>
 
 	</head>
 	<body>
@@ -27,11 +33,22 @@
 		<div class="wrapper space-x-4">
 			<div class="max-w-6xl flex-1 p-4 bg-white border border-gray-100 rounded shadow-md flex flex-col justify-between">
 				<h2 class="flex justify-center py-8 font-bold">World map much wow!!</h2>
-				<input id="timeSlider"> 
+				<div class="flex flex-row justify-between">
+					<div id="minYearValue"></div>
+					<div id="maxYearValue"></div>
+				</div>
+
+				<div id="sliderYearValue"></div>
+				<!-- <div id="timeSlider"></div> -->
+				<!-- <input id="timeSlider">  -->
+				<svg id="timeSlider" class=""></svg>
+				<!-- <svg width="400" height="300"></svg> -->
+				
+
 				<div class="h-2/3 w-full bg-gray-100 flex justify-center items-center" id="map"></div>
 			</div>
 			
-			<div class="max-w-xl flex-1 bg-white rounded shadow-md p-4">stuffs</div>
+			<!-- <div class="max-w-xl flex-1 bg-white rounded shadow-md p-4">stuffs</div> -->
 		</div>
 		<div class="max-w-screen w-full p-4 h-36 bg-white border border-gray-100 rounded shadow-md">some other stuff here</div>
 
