--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 		<div class="wrapper space-x-4">
 			<div class="max-w-6xl flex-1 p-4 bg-white border border-gray-100 rounded shadow-md flex flex-col justify-between">
 				<h2 class="flex justify-center py-8 font-bold">World map much wow!!</h2>
-				<div class="flex flex-row justify-between">
-					<div id="minYearValue"></div>
-					<div id="maxYearValue"></div>
+				<div id="mapButtons" class="flex justify-center">
+					<button id="countryButton" class="h-10 px-5 m-2 text-indigo-100 transition-colors duration-150 bg-indigo-700 rounded-lg focus:shadow-outline hover:bg-indigo-800">Country</button>
+					<button id="continentButton" class="h-10 px-5 m-2 text-indigo-100 transition-colors duration-150 bg-indigo-700 rounded-lg focus:shadow-outline hover:bg-indigo-800">Continent</button>
 				</div>
 
 				<div id="sliderYearValue"></div>
