--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 			</div>
 			<div id="rightContainer">
 				<!-- Average temperature deviation  -->
-				<p id="RightHeader">Avarage temperature increase the last 20 years. (1999-2019)</p>
+				<p id="RightHeader">Average temperature increase the last 20 years. (1999-2019)</p>
 				
 				<div id="bars-container">
 				</div>
