small fix in index

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<div class="w-8 h-8 inline-block border rounded-lg border-gray-800 colorBox5"></div>
 							</div>
 							<div class="flex flex-col justify-center">
-								<p class="text-center">2&lt</p>
+								<p class="text-center">&#62 2</p>
 								<div class="w-8 h-8 inline-block border rounded-lg border-gray-800 colorBox6"></div>
 							</div>
 							<div class="flex flex-col justify-center">
