--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale= 1.0">
-	<title>Tourigt Projekt</title>
+	<title>Visualizing Climate Data</title>
 	<!-- STYLES -->
 	<link rel="stylesheet" href="./styles/style.css">
 	<link rel="stylesheet" href="./styles/lineChartStyle.css">
@@ -11,24 +11,15 @@
 	<link rel="stylesheet" href="./styles/map.css">
 	<link rel="stylesheet" href="./styles/tailwind.css">
 
-	<!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
-	<!-- <script src="https://d3js.org/d3.v5.min.js" defer></script> -->
-<script src="http://d3js.org/d3.v4.min.js" charset="utf-8" defer></script>
-<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
-
-	<!-- <script src="https://d3js.org/d3-scale.v3.min.js" defer></script> -->
-	<script src="./lib/queue.js" type='text/javascript'></script>
-	
-	
-	<!-- <script src="https://d3js.org/d3.v5.min.js" defer></script> -->
-	<!-- <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script> -->
-	
+	<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
+	<script src="http://d3js.org/d3.v4.min.js" charset="utf-8" defer></script>
+	<script src="https://d3js.org/d3-scale.v3.min.js" defer></script>
+	<script src="./lib/queue.js" type='text/javascript'></script>	
 	
 	<!-- topojson world map:-->
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 	
-	<!-- drag  -->
+	<!-- slider  -->
 	<script src="https://d3js.org/d3-dispatch.v3.min.js"></script>
 	<script src="https://d3js.org/d3-selection.v3.min.js"></script>
 	<script src="https://d3js.org/d3-drag.v3.min.js"></script>
@@ -36,7 +27,6 @@
 	<!-- JS-legendernas filer -->
 	<script src="./js/main.js" defer></script>
 	<script src="./js/lineChart.js" defer></script>
-	<!-- <script src="./js/cList.js" defer></script> -->
 	<script src="./js/lineChartFunctions.js" defer></script>
 	<script src="./js/updateLineChart.js" defer></script>
 	<script src="./js/barChart.js" defer></script>
